--- a/index.html
+++ b/index.html
@@ -2,14 +2,6 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Jasmine Spec Runner v3.6.0</title>
-
-  <link rel="shortcut icon" type="image/png" href="lib/jasmine-3.6.0/jasmine_favicon.png">
-  <link rel="stylesheet" href="lib/jasmine-3.6.0/jasmine.css">
-
-  <script src="lib/jasmine-3.6.0/jasmine.js"></script>
-  <script src="lib/jasmine-3.6.0/jasmine-html.js"></script>
-  <script src="lib/jasmine-3.6.0/boot.js"></script>
 
   <!-- include source files here... -->
   <script src="src/note.js"></script>
@@ -17,8 +9,8 @@
 
 
   <!-- include spec files here... -->
-  <script src="spec/note-test.js"></script>
-  <script src="spec/notebook-test.js"></script>
+  <script src="tests/noteTest.js"></script>
+  <script src="tests/notebookTest.js"></script>
 
 
 </head>
