--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!-- include spec files here... -->
   <script src="tests/noteTest.js"></script>
   <script src="tests/notebookTest.js"></script>
+  <script src="tests/asserts.js"></script>
 
 
 </head>
