--- a/index.html
+++ b/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-
-  <!-- include source files here... -->
-  <script src="src/note.js"></script>
-  <script src="src/notebook.js"></script>
-
-
-  <!-- include spec files here... -->
-  <script src="tests/noteTest.js"></script>
-  <script src="tests/notebookTest.js"></script>
-  <script src="tests/asserts.js"></script>
-
-
 </head>
-
 <body>
+  <h1>Welcome To Your Notebook!</h1>
+  <h2>Create a new note below:</h2>
+  <input type='text' id='textbox' placeholder="Start typing...">
+  <button id='create-note'>Create Note</button>
+
+ <h2>View Your Exising Notes:</h2>
+ <ul>
+  <!-- var result = this.entries.map(myFunction);
+  function myFunction(entry, index, array) {
+  return entry.text; -->
+ </ul>
+
+
+
+
+
+
+
+
+
 </body>
+
 </html>
