--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script src="tests/noteTest.js"></script>
   <script src="tests/notebookTest.js"></script>
   <script src="tests/asserts.js"></script>
+  <script src="tests/new-notebook-tests.js"></script>
 
 
 </head>
