added beforeEach method to test framework

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 
 
   <!-- include spec files here... -->
-  <script src="tests/noteTest.js"></script>
-  <script src="tests/notebookTest.js"></script>
-  <script src="tests/asserts.js"></script>
+  <!-- <script src="tests/noteTest.js"></script>
+  <script src="tests/notebookTest.js"></script> -->
+  <script src="tests/test-helpers.js"></script>
   <script src="tests/new-notebook-tests.js"></script>
+    <script src="tests/new-note-tests.js"></script>
 
 
 </head>
