--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <!-- include source files here... -->
   <script src="src/note.js"></script>
   <script src="src/notebook.js"></script>
+  <script src="../../../Desktop/Projects/export_practice/method_to_export.js"></script>
 
 
   <!-- include spec files here... -->
@@ -13,7 +14,7 @@
   <script src="tests/notebookTest.js"></script> -->
   <script src="tests/test-helpers.js"></script>
   <script src="tests/new-notebook-tests.js"></script>
-    <script src="tests/new-note-tests.js"></script>
+  <script src="tests/new-note-tests.js"></script>
 
 
 </head>
